--- a/Rabbit.Infra.IoC/Rabbit.Infra.IoC.csproj
+++ b/Rabbit.Infra.IoC/Rabbit.Infra.IoC.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MicroRabbit\MicroRabbit.Domain.Core\MicroRabbit.Domain.Core.csproj" />
+    <ProjectReference Include="..\MicroRabit.Infra.Bus\MicroRabit.Infra.Bus.csproj" />
+  </ItemGroup>
+
 </Project>
